--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>MTM ASSOCIATES</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
@@ -15,7 +14,10 @@
     <header>
         <div class="containers" id="firtpage">
             <nav>
-                <div class="navuls">
+                <div class="barss">
+                    <i class="fa fa-bars" aria-hidden="true"></i>
+                </div>
+                <div class="navuls" id="navsss">
                     <ul>
                         <li><a href="#firtpage">Home</a></li>
                         <li><a href="#about">About</a></li>
