--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     </section>
 
     <footer>
-        <div class="container">
+        <div class="containerfoo">
             <p>&copy; 2006 MTM ASSOCIATES. All rights reserved.</p>
         </div>
     </footer>
