--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
     <section id="oders">
         <div class="container2">
+            <h2 >Select Your Colors</h2>
             <a href="#inputss">
                 <div class="cards">
                     <div class="cardcolors1"></div>
