--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
     <section id="inputss">
         <div class="orderinput">
-            <h2>Give Your Orders</h2>
+            <h2 style="padding-top: 20px;">Give Your Orders</h2>
             <div class="detail1">
                 <input type="text" placeholder="Enter Company Name">
             </div>
